Staging/Platform_V2/tag_v2/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tag-v2-svc
  # namespace: terrestrial-platform
spec:
  selector:
    app: tag-v2-app
  ports:
    - protocol: "TCP"
      port: 8044
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tag-v2-app
spec:
  selector:
    matchLabels:
      app: tag-v2-app
  replicas: 1
  template:
    metadata:
      labels:
        app: tag-v2-app
    spec:
      containers:
        - name: tag-v2-app
          image: savantripathi22/tag_v2:july4
          imagePullPolicy: Always
          ports:
            - containerPort: 8044
