Staging/Platform_V2/tag_v2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-tag-v2-service
  namespace: staging
spec:
  selector:
    app: staging-tag-v2-app
  ports:
    - protocol: "TCP"
      port: 9044
      targetPort: 8080
  type: ClusterIP
